ART 3.0
* Reorganised the code for easier maintenance and enhanced user experience
 - now using maven, spring mvc, bootstrap, among other libraries
* Renamed "Report on Column" query types to "Group"
* Renamed "Graph" query types to "Chart"
* Renamed "Query" concept to "Report"
* Renamed "View Modes" to "Report Formats"
* Modified application settings configuration. Settings need to be manually re-entered.
* Modified application urls. Previously bookmarked urls may no longer work.
* Added ability to create reports based on FreeMarker templates
* Added ability to create reports based on Thymeleaf templates
* Added ability to create reports based on MS Word (docx), LibreOffice Writer (odt) and MS PowerPoint (pptx) templates
* Added docx, odt, ods report formats for tabular and jasper reports
* Added syntax highlighting during report creation
* Added tabbed dashboards option
* Added Gridstack Dashboard report type
* Added ReactPivot report type
* Added PivotTable.js report types
* Added Dygraphs report types
* Added DataTables report types
* Added C3.js report type
* Added Chart.js report type
* Added Datamaps report types
* Added Leaflet report type
* Added OpenLayers report type
* Added Tabular Heatmap report type
* Added ability to create csv output jobs
* Added ability to create fixed width output jobs
* Allow multi-value parameters with Oracle databases to have more than 1000 items
* Added ability to schedule dashboard reports and output them as pdf
* Allow for specifying specific colours to be used for given chart series
* Allow for localization of parameter labels and help text
* Requires Internet Explorer 8+, or recent versions of other browsers
* Requires Java 7
* Requires Servlet 3.0
* Updated libraries, including jasperreports, quartz, jxls, among others
* Changed license from GPLv2 to GPLv3

ART 2.5.4
* Added Lithuanian translation (thanks to Dalius Guzauskas)
* Added Polish translation (thanks to Pawel Osuch)
* Updated German translation