@@ -458,7 +458,7 @@ INSERT INTO ART_PARAMETERS VALUES(1,'regionId','Select Region','Single-Value','R
 INSERT INTO ART_PARAMETERS VALUES(2,'startDate','From Date','Single-Value','From','Pick a date by clicking on the calendar icon','Date','2010-01-01',0,0,4,0,-1,-1,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(3,'endDate','To Date','Single-Value','To','Pick a date by clicking on the calendar icon','Date','',0,0,4,0,-1,-1,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(4,'year','Set year (use 2010 for demo)','Single-Value','Year','Set year integer value (use 2010 for demo)','Integer','2010',0,0,3,0,-1,-1,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
-INSERT INTO ART_PARAMETERS VALUES(5,'regionIds','Select Regions','Multi-Value','Regions','Select one or more items from the list','Number','',0,1,4,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
+INSERT INTO ART_PARAMETERS VALUES(5,'regionIds','Select Regions','Multi-Value','Regions','Select one or more items from the list','Double','',0,1,4,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(6,'regionId','Select Region','Single-Value','Region','Select one item from the list','Integer','4',0,1,4,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(7,'startDate','From Date','Single-Value','From','Pick a date by clicking on the calendar icon','Date','2010-01-01',0,0,4,0,-1,-1,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(8,'endDate','To Date','Single-Value','To','Pick a date by clicking on the calendar icon','Date','',0,0,4,0,-1,-1,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
@@ -497,18 +497,18 @@ INSERT INTO ART_PARAMETERS VALUES(40,'period','YYYY-MM format','Single-Value','P
 INSERT INTO ART_PARAMETERS VALUES(41,'city','City Name (try with %\u0648%)','Single-Value','City','Type a value','Varchar','%',0,0,0,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(42,'order_date','','Single-Value','Order Date','','Date','2010-12-01',0,0,0,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(43,'city','','Single-Value','City','','Integer','',0,1,5,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
-INSERT INTO ART_PARAMETERS VALUES(44,'item','','Multi-Value','Item','','Number','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
+INSERT INTO ART_PARAMETERS VALUES(44,'item','','Multi-Value','Item','','Double','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(45,'order_date','','Single-Value','Order Date','','Date','2010-12-01',0,0,0,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(46,'city','','Single-Value','City','','Integer','',0,1,5,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
-INSERT INTO ART_PARAMETERS VALUES(47,'item','','Multi-Value','Item','','Number','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
+INSERT INTO ART_PARAMETERS VALUES(47,'item','','Multi-Value','Item','','Double','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(48,'order_date','','Single-Value','Order Date','','Date','2010-12-01',0,0,0,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(49,'city','','Single-Value','City','','Integer','',0,1,5,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(50,'item','','Multi-Value','Item','','Integer','',0,1,3,0,0,0,0,0,NULL,NULL,'2016-04-03 17:42:12.048000','admin',NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(51,'order_date','','Single-Value','Order Date','','Date','2010-12-01',0,0,0,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(52,'city','','Single-Value','City','','Integer','',0,1,5,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
-INSERT INTO ART_PARAMETERS VALUES(53,'item','','Multi-Value','Item','','Number','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
+INSERT INTO ART_PARAMETERS VALUES(53,'item','','Multi-Value','Item','','Double','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(54,'city','','Single-Value','City','','Integer','',0,1,5,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
-INSERT INTO ART_PARAMETERS VALUES(55,'item','','Multi-Value','Item','','Number','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
+INSERT INTO ART_PARAMETERS VALUES(55,'item','','Multi-Value','Item','','Double','',0,1,3,0,0,0,0,0,NULL,NULL,NULL,NULL,NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(56,'cityId','','Single-Value','City','','Integer','',0,1,43,0,NULL,NULL,0,0,'2016-04-01 11:10:35.619000','admin','2016-04-02 19:52:00.541000','admin',NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(57,'cityId','Select City','Single-Value','City','Pick  value from the list once the Region has been selected','Integer','',0,1,44,0,NULL,NULL,0,0,'2016-04-03 16:33:03.050000','admin','2016-04-03 16:44:07.249000','admin',NULL,0,NULL)
 INSERT INTO ART_PARAMETERS VALUES(58,'regionId','Select Region','Single-Value','Region','Select one item from the list','Integer','',0,1,4,0,NULL,NULL,0,0,'2017-05-03 20:39:54.170000','admin',NULL,NULL,0,0,'{\u000d\u000a    "i18n": {\u000d\u000a        "label" : [{"sw": "Sehemu"}, {"lt, en" : "Place"}],\u000d\u000a        "helpText": [{"sw": "Jaribio"}]\u000d\u000a    }\u000d\u000a}')
