@@ -5,6 +5,7 @@ ART 3.0
 * Renamed "Graph" query types to "Chart"
 * Renamed "Query" concept to "Report"
 * Renamed "View Modes" to "Report Formats"
+* Renamed "Number" parameter data type to "Double"
 * Modified application settings configuration. Settings need to be manually re-entered.
 * Modified application urls. Previously bookmarked urls may no longer work.
 * Added ability to create reports based on FreeMarker templates
